welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
  while (!estSurBiscuit()){
    isFacingTrail()}
  if (estSurBiscuit()){
    prendBiscuit()
  }
}
// Write your code here
}

def isFacingTrail():Boolean = {
  if (estFaceMur()){
    return false}
  else{ 
    avance()
    if(getCouleurSol()==Color.green){
      recule()
      return true}
    else {
      recule()
      return false}

  }
}